--- a/index.html
+++ b/index.html
@@ -57,14 +57,14 @@
         }
 
         function makeNonliner(s) {
-            if (selected_presure == "High") {
+            if (selected_presure == "HP") {
                 if (second < 180) {
                     second = second * 7 / 3;
                 } else if (second >= 180) {
                     second = 420 + t * 3 / 7;
                     t += 1;
                 }
-            } else if (selected_presure == "Low") {
+            } else if (selected_presure == "LP") {
                 if (second < 420) {
                     second = second * 3 / 7;
                 } else if (second >= 420) {
